updating the index

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="container">
             <div class="cta-area">
                 <div class="cta-area-side">
-                    <div class="cta-area-title">Comece um novo projeto</div>
+                    <div class="cta-area-title">Comece um projeto</div>
                 </div>
                 <div class="cta-area-side">
                     <div class="cta-area-subtitle">Tem interesse em trabalhar junto? Vamos agendar uma reunião rápida. Eu pago o café.</div>
