adding whatsapp to the project

--- a/index.html
+++ b/index.html
@@ -254,5 +254,8 @@
     </footer>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
+    <!-- inicio Flut --> 
+    <script src='https://sistema.flut.com.br/api/company/showModal?x=45&z=https://brunoxavier.dev/'></script>
+    <!-- fim Flut -->
 </body>
 </html>
