adding animation via css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Bruno Santana Xavier</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
-    <header class="container">
+    <header class="container animate__animated animate__backInDown">
         <div class="navbar">
             <div class="logo">
                 <a href="">
@@ -28,7 +32,7 @@
         </nav>
     </header>
 
-    <section class="hero container">
+    <section class="hero container animate__animated animate__backInDown">
         <h1>Designer, Frontend Developer & Video Maker</h1>
         <h2>Eu desenho e codifico projetos bonitos e amo o que faço.</h2>
         <img class="hero-avatar" src="assets/images/avatar.svg" alt="">
