--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <nav>
-            <a href="">Blog</a>
+            <a href="">Meu Blog CSS</a>
             <a href="" class="button">Contato</a>
         </nav>
     </header>
